parse scene finish

--- a/RTv1/Makefile
+++ b/RTv1/Makefile
@@ -6,7 +6,7 @@
 #    By: dtreutel <dtreutel@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/07/30 10:04:46 by dtreutel          #+#    #+#              #
-#    Updated: 2019/08/03 15:54:40 by dtreutel         ###   ########.fr        #
+#    Updated: 2019/08/28 21:48:43 by dtreutel         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,16 +14,23 @@ NAME = RTv1
 
 SRC_DIR=./src
 OBJ_DIR=./objects
-C_FILES=	main.c \
-			ft_exit.c \
-			new_obj.c \
-			ft_atof.c \
-			trace_ray.c \
-			pars_scene.c \
-			dell_all_obj.c \
-			ft_scan_digit.c \
-			get_next_line.c \
-			diffuse_reflection.c \
+C_FILES= \
+			clr_plane.c\
+			clr_sphere.c\
+			dell_all_obj.c\
+			diffuse_reflection.c\
+			dot_product.c\
+			ft_atof.c\
+			ft_exit.c\
+			ft_scan_digit.c\
+			get_next_line.c\
+			len_vector.c\
+			main.c\
+			new_obj.c\
+			pars_scene.c\
+			roots_quadratic_equation.c\
+			trace_ray.c\
+			print_all.c
 
 O_FILES = $(C_FILES:.c=.o)
 
