--- a/RTv1/Makefile
+++ b/RTv1/Makefile
@@ -6,7 +6,7 @@
 #    By: dtreutel <dtreutel@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/07/30 10:04:46 by dtreutel          #+#    #+#              #
-#    Updated: 2019/09/14 11:39:07 by dtreutel         ###   ########.fr        #
+#    Updated: 2019/09/15 12:17:41 by dtreutel         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,6 +22,7 @@ C_FILES= \
 			ft_atof.c\
 			rotation.c\
 			clr_cone.c\
+			open_file.c\
 			trace_ray.c\
 			print_all.c\
 			clr_plane.c\
