intersect sphere, begin list intersect

--- a/ЭRT/.vscode/settings.json
+++ b/ЭRT/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
 	"files.associations": {
 		"ios": "c",
-		"algorithm": "c"
+		"algorithm": "c",
+		"rt.h": "c",
+		"complex": "c",
+		"cmath": "c"
 	}
 }
